deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-backend
  name: spring-boot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-boot-backend
  template:
    metadata:
      labels:
        deployment: spring-boot-backend
    spec:
      containers:
      - name: spring-boot-backend
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
        image: image-registry.openshift-image-registry.svc:5000/default/spring-boot-test:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /deployments/config
            name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: external-properties
